--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
+pyside6 = "^6.6.1"
+opencv-python = "^4.9.0.80"
+numpi = "^0.3.1"
 
 
 [build-system]
