--- a/.github/workflows/linting.yaml
+++ b/.github/workflows/linting.yaml
@@ -14,5 +14,5 @@ jobs:
         pip install poetry
         poetry install --with dev
 
-      - name: Run tests
+      - name: Run linting
         run: poetry run pre-commit run --all-files
