--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = ">=3.9,<3.13"
 pyside6 = "^6.6.1"
 opencv-python = "^4.9.0.80"
 numpi = "^0.3.1"
+screeninfo = "^0.8.1"
 
 
 [build-system]
