--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ isort = "^5.13.2"
 flake8 = "^7.0.0"
 pyupgrade = "^3.15.0"
 
+# testing
+tox = "^4.12.1"
+pytest = "^8.0.0"
+
 [tool.isort]
 profile = "black"
 multi_line_output = 3
