add tox testenv

--- a/tox.ini
+++ b/tox.ini
@@ -10,3 +10,22 @@ exclude =
 # See https://github.com/psf/black/blob/master/docs/the_black_code_style.md#line-length for more details
 max-line-length = 80
 max-complexity = 18
+
+[tox]
+envlist = py{39,310,311}
+
+# Need isolated build if we're using Poetry as well
+# https://tox.readthedocs.io/en/latest/example/package.html
+isolated_build = True
+
+[pytest]
+norecursedirs = .tox
+
+[testenv]
+extras = dev
+deps =
+  poetry
+
+commands =
+  poetry install -v
+  poetry run pytest -vs tests/
