--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,8 +17,9 @@ flake8 = "^7.0.0"
 pyupgrade = "^3.15.0"
 
 # testing
-tox = "^4.12.1"
 pytest = "^8.0.0"
+tox = "^4.12.1"
+tox-gh-actions = "^3.2.0"
 
 [tool.isort]
 profile = "black"
