--- a/tox.ini
+++ b/tox.ini
@@ -29,3 +29,10 @@ deps =
 commands =
   poetry install -v
   poetry run pytest -vs tests/
+
+
+[gh-actions]
+python =
+    3.9: py39
+    3.10: py310
+    3.11: py311
