--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -22,3 +22,29 @@ jobs:
 
     - name: Run linting
       run: poetry run pre-commit run --all-files
+
+test:
+    needs: linting
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ "ubuntu-latest", "macos-latest" ]
+        python-version: [ "3.9", "3.10", "3.11", "3.12" ]
+    runs-on: ${{ matrix.os }}
+
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install poetry
+          poetry install --with dev
+
+      - name: Run tests
+        run: poetry run tox -e py
