--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,6 +16,7 @@ jobs:
     
     - name: Install dependencies
       run: |
+        cd frontend
         python -m pip install --upgrade pip
         pip install poetry
         poetry install --with dev
@@ -42,6 +43,7 @@ jobs:
 
           - name: Install dependencies
             run: |
+              cd frontend
               python -m pip install --upgrade pip
               pip install poetry
               poetry install --with dev
