--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,9 +43,10 @@ jobs:
 
           - name: Install dependencies
             run: |
-              cd frontend
               python -m pip install --upgrade pip
               pip install poetry
               poetry install --with dev
+            working-directory: ./frontend
           - name: Run tests
             run: poetry run tox -e py
+            working-directory: ./frontend
