--- a/frontend/.pre-commit-config.yaml
+++ b/frontend/.pre-commit-config.yaml
@@ -3,14 +3,14 @@ repos:
     hooks:
       - id: system
         name: isort
-        entry: cd frontend && poetry run isort .
+        entry: bash -c "cd frontend && poetry run isort ."
         language: system
         pass_filenames: false
   - repo: local
     hooks:
     -   id: pyupgrade
         name: pyupgrade
-        entry: cd frontend && poetry run pyupgrade --py39-plus
+        entry: bash -c "cd frontend && poetry run pyupgrade --py39-plus $@" --
         language: python
         types: [python]
         pass_filenames: true
@@ -18,13 +18,13 @@ repos:
     hooks:
       - id: system
         name: Black
-        entry: cd frontend && poetry run black .
+        entry: bash -c "cd frontend && poetry run black ."
         language: system
         pass_filenames: false
   - repo: local
     hooks:
       - id: system
         name: flake8
-        entry: cd frontend && poetry run flake8 .
+        entry: bash -c "cd frontend && poetry run flake8 ."
         language: system
         pass_filenames: false
