--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,6 +10,13 @@ python = ">=3.10"
 
 django = "^5.0.2"
 
+[tool.poetry.dev-dependencies]
+# linting
+pre-commit = "^3.6.0"
+black = "^24.1.0"
+isort = "^5.13.2"
+flake8 = "^7.0.0"
+pyupgrade = "^3.15.0"
 
 [build-system]
 requires = ["poetry-core"]
