--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,10 @@ isort = "^5.13.2"
 flake8 = "^7.0.0"
 pyupgrade = "^3.15.0"
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
