--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,11 @@ isort = "^5.13.2"
 flake8 = "^7.0.0"
 pyupgrade = "^3.15.0"
 
+# testing
+pytest = "^8.0.0"
+tox = "^4.12.1"
+tox-gh-actions = "^3.2.0"
+
 [tool.isort]
 profile = "black"
 multi_line_output = 3
