--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,28 +13,40 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    
+
     - uses: actions/setup-python@v3
       with:
         python-version: "3.9"
-    
-    - name: Install dependencies
+
+    - name: "Frontend: Install dependencies"
       run: |
         python -m pip install --upgrade pip
         pip install poetry
         poetry install --with dev
       working-directory: ./frontend
 
-    - name: Run linting
+    - name: "Frontend: Run linting"
       run: poetry run pre-commit run --all-files
       working-directory: ./frontend
+
+    - name: "Backend: Install dependencies"
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry install --with dev
+      working-directory: ./backend
+
+    - name: "Backend: Run linting"
+      run: poetry run pre-commit run --all-files
+      working-directory: ./backend
+
 
   test:
         needs: linting
         strategy:
           fail-fast: false
           matrix:
-            os: [ "ubuntu-latest", "macos-latest" ]
+            os: [ "ubuntu-latest" ]
             python-version: [ "3.9", "3.10", "3.11", "3.12" ]
         runs-on: ${{ matrix.os }}
 
@@ -46,12 +58,24 @@ jobs:
             with:
               python-version: ${{ matrix.python-version }}
 
-          - name: Install dependencies
+          - name: "Frontend: Install dependencies"
             run: |
               python -m pip install --upgrade pip
               pip install poetry
               poetry install --with dev
             working-directory: ./frontend
-          - name: Run tests
+
+          - name: "Frontend: Run tests"
             run: poetry run tox -e py
             working-directory: ./frontend
+
+          - name: "Backend: Install dependencies"
+            run: |
+              python -m pip install --upgrade pip
+              pip install poetry
+              poetry install --with dev
+            working-directory: ./backend
+
+          - name: "Backend: Run tests"
+            run: poetry run tox -e py
+            working-directory: ./backend
