--- a/frontend_old/.pre-commit-config.yaml
+++ b/frontend_old/.pre-commit-config.yaml
@@ -3,29 +3,29 @@ repos:
     hooks:
       - id: system
         name: isort
-        entry: python scripts/poetry_run_wrapper.py frontend isort .
+        entry: python scripts/poetry_run_wrapper.py frontend_old isort .
         language: python
         pass_filenames: false
   - repo: local
     hooks:
       -   id: pyupgrade
           name: pyupgrade
-          entry: python scripts/pyupgrade_wrapper.py frontend
+          entry: python scripts/pyupgrade_wrapper.py frontend_old
           language: python
           types: [python]
           pass_filenames: true
-          files: ^frontend/.*$
+          files: ^frontend_old/.*$
   - repo: local
     hooks:
       - id: system
         name: Black
-        entry: python scripts/poetry_run_wrapper.py frontend black .
+        entry: python scripts/poetry_run_wrapper.py frontend_old black .
         language: python
         pass_filenames: false
   - repo: local
     hooks:
       - id: system
         name: flake8
-        entry: python scripts/poetry_run_wrapper.py frontend flake8 .
+        entry: python scripts/poetry_run_wrapper.py frontend_old flake8 .
         language: python
         pass_filenames: false
