--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.3",
     "electron-squirrel-startup": "^1.0.0"
   }
 }
