--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -63,11 +63,11 @@ jobs:
               python -m pip install --upgrade pip
               pip install poetry
               poetry install --with dev
-            working-directory: ./frontend
+            working-directory: ./frontend_py
 
           - name: "Frontend: Run tests"
             run: poetry run tox -e py
-            working-directory: ./frontend
+            working-directory: ./frontend_py
 
           - name: "Backend: Install dependencies"
             run: |
