--- a/frontend_py/pyproject.toml
+++ b/frontend_py/pyproject.toml
@@ -8,6 +8,22 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
 
+[tool.poetry.dev-dependencies]
+# linting
+pre-commit = "^3.6.0"
+black = "^24.1.0"
+isort = "^5.13.2"
+flake8 = "^7.0.0"
+pyupgrade = "^3.15.0"
+
+# testing
+pytest = "^8.0.0"
+tox = "^4.12.1"
+tox-gh-actions = "^3.2.0"
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
 
 [build-system]
 requires = ["poetry-core"]
