--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -11,6 +11,7 @@ python = ">=3.10"
 django = "^5.0.2"
 djangorestframework = "^3.14.0"
 djangorestframework-simplejwt = "^5.3.1"
+pillow = "^10.2.0"
 
 [tool.poetry.dev-dependencies]
 # linting
