--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "electron-squirrel-startup": "^1.0.0"
   }
