--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,7 +16,7 @@ jobs:
 
     - uses: actions/setup-python@v3
       with:
-        python-version: "3.9"
+        python-version: "3.10"
 
     - name: "Frontend: Install dependencies"
       run: |
@@ -47,7 +47,7 @@ jobs:
           fail-fast: false
           matrix:
             os: [ "ubuntu-latest" ]
-            python-version: [ "3.9", "3.10", "3.11", "3.12" ]
+            python-version: [ "3.10", "3.11", "3.12" ]
         runs-on: ${{ matrix.os }}
 
         steps:
