--- a/frontend_py/pyproject.toml
+++ b/frontend_py/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.13"
+flask = "^3.0.2"
+opencv-python = "^4.9.0.80"
+mediapipe = "^0.10.11"
 
 [tool.poetry.dev-dependencies]
 # linting
