--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -58,16 +58,16 @@ jobs:
             with:
               python-version: ${{ matrix.python-version }}
 
-          - name: "Frontend: Install dependencies"
-            run: |
-              python -m pip install --upgrade pip
-              pip install poetry
-              poetry install --with dev
-            working-directory: ./frontend_py
+          # - name: "Frontend: Install dependencies"
+          #   run: |
+          #     python -m pip install --upgrade pip
+          #     pip install poetry
+          #     poetry install --with dev
+          #   working-directory: ./frontend_py
 
-          - name: "Frontend: Run tests"
-            run: poetry run tox -e py
-            working-directory: ./frontend_py
+          # - name: "Frontend: Run tests"
+          #   run: poetry run tox -e py
+          #   working-directory: ./frontend_py
 
           - name: "Backend: Install dependencies"
             run: |
